# renderer

./: CMakeLists.txt  main.c  renderer_test.c  spectrum.c
.github/workflows/: cmake.yml
cmake/: renderer-config.cmake
include/renderer/: camera.h  integrator.h  primitive.h  rtypedef.h  shape.h  spectrum.h
